test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-create-on-trigger-deletion/chainsaw-step-01-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    downstream: cpol-clone-create-on-trigger-deletion-manifest-ns
  name: cpol-clone-create-on-trigger-deletion-trigger-ns
