test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-create-on-trigger-deletion/chainsaw-step-01-apply-1-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-clone-create-on-trigger-deletion-manifest-ns
