test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-create-on-trigger-deletion/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-clone-create-on-trigger-deletion
spec:
  rules:
  - generate:
      apiVersion: v1
      clone:
        name: regcred
        namespace: cpol-clone-create-on-trigger-deletion-manifest-ns
      kind: Secret
      name: cpol-clone-create-on-trigger-deletion-secret
      namespace: '{{request.object.metadata.labels.downstream}}'
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - Namespace
          operations:
          - DELETE
    name: clone-secret
