test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-create-on-trigger-deletion/01-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: cpol-clone-create-on-trigger-deletion
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
