test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-create-on-trigger-deletion/04-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: cpol-clone-create-on-trigger-deletion-secret
  namespace: cpol-clone-create-on-trigger-deletion-manifest-ns
