test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-create-on-trigger-deletion/chainsaw-step-04-assert-1-1.yaml
apiVersion: v1
kind: Secret
metadata:
  name: cpol-clone-create-on-trigger-deletion-secret
  namespace: cpol-clone-create-on-trigger-deletion-manifest-ns
