test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-create-on-trigger-deletion/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cpol-clone-create-on-trigger-deletion
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
    - apply:
        file: chainsaw-step-01-apply-1-3.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-clone-create-on-trigger-deletion
  - name: step-02
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: Namespace
          name: cpol-clone-create-on-trigger-deletion-trigger-ns
  - name: step-03
    try:
    - sleep:
        duration: 3s
  - name: step-04
    try:
    - assert:
        file: chainsaw-step-04-assert-1-1.yaml
